<resources>
    <string name="app_name">Github App</string>
    <string name="searchbar_hint">Who Are You Looking For?</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="fab_desc">Add favorite User</string>
    <string name="favorite_user">Favorite User</string>
    <string name="option_menu">Option Menu</string>
    <string name="list_layout">List Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="setting">Setting</string>
    <string name="insertDatabase">Has been add to your favorite user</string>
    <string name="deleteDatabase">Has been delete in your favorite user</string>
    <string name="undo">Undo</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tab_layout_following_dan_followers">Tab layout Following dan followers</string>
</resources>