<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_activity"
        android:icon="@drawable/favorite_icon_blue"
        android:title="@string/favorite_user"
        app:showAsAction="always"/>

    <item
        android:id="@+id/option_menu"
        android:title="@string/option_menu"
        android:icon="@drawable/option_menu_icon"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/list_layout"
                android:title="@string/list_layout"
                android:icon="@drawable/list_layout_icon"
                app:showAsAction="always"/>

            <item
                android:id="@+id/grid_layout"
                android:title="@string/grid_layout"
                android:icon="@drawable/grid_layout_icon"
                app:showAsAction="always"/>

            <item
                android:id="@+id/settings"
                android:title="@string/setting"
                android:icon="@drawable/setting_icon"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>